--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "0.18.0",
-    "base58check": "2.0.0",
+    "base58check": "^2.0.0",
     "bcoin": "1.0.0-beta.15",
-    "bitcoin-cash-rpc": "0.1.0",
-    "bs58": "4.0.1",
+    "bitcoin-cash-rpc": "git@github.com:kevinejohn/Bitcoin-Cash-RPC.git",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
