--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "Cashmunity",
+  "version": "0.0.1",
+  "description": "Bitcoin Cash ",
+  "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node ./server/server.js",
-    "lint": "node_modules/.bin/eslint server/**/*.js",
+    "start": "node ./server/server.js",
+    "lint": "node_modules/.bin/eslint server/*.js server/**/*.js",
     "prettier": "prettier --write --single-quote --trailing-comma es5 server/*.js server/**/*.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Kevin Johnson (KevinEJohn)",
+  "license": "MIT",
   "dependencies": {
     "axios": "0.18.0",
-    "base58check": "^2.0.0",
+    "base58check": "2.0.0",
     "bcoin": "1.0.0-beta.15",
     "bitcoin-cash-rpc": "git@github.com:kevinejohn/Bitcoin-Cash-RPC.git",
-    "compression": "^1.7.2",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "sequelize": "4.37.6",
-    "simple-node-logger": "^0.93.37",
+    "compression": "1.7.2",
+    "cors": "2.8.4",
+    "express": "4.16.3",
+    "js-yaml": "3.11.0",
+    "sequelize": "4.37.7",
     "sqlite3": "4.0.0"
   },
   "devDependencies": {
