--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Bitcoin Cash ",
   "main": "server/server.js",
+  "homepage": "https://github.com/kevinejohn/Cashmunity",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server/server.js",
