--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "bitcoin",
     "cash",
     "memo",
+    "memocash",
+    "memo.cash",
+    "decentralized",
     "blockpress",
-    "social"
+    "social",
+    "media"
   ],
   "author": "Kevin Johnson (KevinEJohn)",
   "license": "MIT",
@@ -23,7 +27,7 @@
     "axios": "0.18.0",
     "base58check": "2.0.0",
     "bcoin": "1.0.0-beta.15",
-    "bitcoin-cash-rpc": "git@github.com:kevinejohn/Bitcoin-Cash-RPC.git",
+    "bitcoin-cash-rpc": "https://github.com/kevinejohn/Bitcoin-Cash-RPC.git",
     "compression": "1.7.2",
     "cors": "2.8.4",
     "express": "4.16.3",
