Code refactor/cleanup

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -4,6 +4,8 @@ BITCOIN_RPC_PASSWORD: changeme
 BITCOIN_RPC_PORT: 8332
 BITCOIN_RPC_TIMEOUT: 3000
 
+DB_DISABLE: false
+
 DB_DIALECT: sqlite
 # DB_DIALECT: postgres
 # DB_PROTOCOL: postgres
